// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] HeaderSwitch Switch value change 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 5,
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰕰
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#03dac4"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginLeft": 2,
        },
      ]
    }
    testID="SwitcherState-0"
    tintColor=""
    value={false}
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 22,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰉹
  </Text>
</View>
`;

exports[`[Component] HeaderSwitch Switch value change 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 5,
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰕰
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#03dac4"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginLeft": 2,
        },
      ]
    }
    testID="SwitcherState-1"
    tintColor=""
    value={true}
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 22,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰉹
  </Text>
</View>
`;

exports[`[Component] HeaderSwitch renders correctly with switch false 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 5,
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰕰
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#03dac4"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginLeft": 2,
        },
      ]
    }
    testID="SwitcherState-0"
    tintColor=""
    value={false}
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 22,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰉹
  </Text>
</View>
`;

exports[`[Component] HeaderSwitch renders correctly with switch right 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "marginLeft": 10,
      "marginRight": 5,
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 20,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰕰
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#03dac4"
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "marginLeft": 2,
        },
      ]
    }
    testID="SwitcherState-1"
    tintColor=""
    value={true}
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 22,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰉹
  </Text>
</View>
`;
